recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:5: error: not found: value occurence
		case a::b => return occurence(l.tail, v)
                                    ^